--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,9 @@
 [submodule "scan_context_loop_detector/thirdparty/scancontext"]
 	path = scan_context_loop_detector/thirdparty/scancontext
 	url = https://github.com/koide3/scancontext.git
+[submodule "dbow_loop_detector/thirdparty/DBoW2"]
+	path = dbow_loop_detector/thirdparty/DBoW2
+	url = https://github.com/dorian3d/DBoW2.git
+[submodule "dbow_loop_detector/thirdparty/DBoW3"]
+	path = dbow_loop_detector/thirdparty/DBoW3
+	url = https://github.com/rmsalinas/DBow3.git
