--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,10 @@
 cmake_minimum_required(VERSION 3.0.2)
 project(glim_ext)
 
+set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_CURRENT_LIST_DIR}/cmake")
+
+
+add_subdirectory(dbow_loop_detector)
 add_subdirectory(scan_context_loop_detector)
 
 ############
@@ -9,7 +13,7 @@ add_subdirectory(scan_context_loop_detector)
 find_package(catkin)
 if(catkin_FOUND)
   catkin_package(
-    INCLUDE_DIRS scan_context_loop_detector/include
-    LIBRARIES scan_context_loop_detector
+    INCLUDE_DIRS scan_context_loop_detector/include dbow_loop_detector/include
+    LIBRARIES scan_context_loop_detector dbow_loop_detector
   )
 endif()
