--- a/orb_slam_frontend/CMakeLists.txt
+++ b/orb_slam_frontend/CMakeLists.txt
@@ -20,22 +20,6 @@ target_link_libraries(orb_slam_frontend
   ORB_SLAM3
   glim_ext
 )
-
-add_executable(orb_slam_test
-  src/glim_ext/orb_slam_test.cpp
-)
-target_include_directories(orb_slam_test PRIVATE
-  include
-  thirdparty/ORB_SLAM3
-  thirdparty/ORB_SLAM3/include
-  thirdparty/ORB_SLAM3/include/CameraModels
-  ${roslib_INCLUDE_DIRS}
-)
-target_link_libraries(orb_slam_test
-  ORB_SLAM3
-  glim_ext
-  ${roslib_LIBRARIES}
-)
-target_compile_options(orb_slam_test PRIVATE
+target_compile_options(orb_slam_frontend PRIVATE
   -std=c++17
 )
