--- a/config/config_sensors_ext.json
+++ b/config/config_sensors_ext.json
@@ -1,29 +1,41 @@
 {
   "sensors_ext": {
     "camera_intrinsics": [
-      431.38739114,
-      430.24961762,
-      427.4407802,
-      238.52694868
+      696.7174426776,
+      696.4862496732,
+      708.4206218964,
+      535.6712007522
     ],
     "camera_distortion_coeffs": [
-      0.00701751,
-      -0.00259845,
-      -0.00147552,
-      0.00066408
+      -0.0465180371,
+      0.0160363324,
+      -0.0170339468,
+      0.0050095489
     ],
     "camera_image_size": [
-      848,
-      480
+      1440,
+      1080
     ],
-    "T_camera_imu": [
-      0.00586,
-      0.01738,
-      -0.01596,
-      -0.00072,
-      0.00087,
-      -0.00151,
-      1.00000
-    ]
+    "T_imu_camera": [
+      0.05071,
+      -0.06096,
+      -0.00593,
+      0.49878,
+      0.50184,
+      0.49952,
+      0.49985
+    ],
+    "T_lidar_camera": [
+      0.0,
+      0.0,
+      0.0,
+      0.0,
+      0.0,
+      0.0,
+      1.0
+    ],
+    "imu_acc_noise": 0.01,
+    "imu_gyro_noise": 0.01,
+    "imu_int_noise": 0.01
   }
 }
