--- a/package.xml
+++ b/package.xml
@@ -1,16 +1,18 @@
 <?xml version="1.0"?>
-<package format="2">
+<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
+<package format="3">
   <name>glim_ext</name>
   <version>0.0.0</version>
-  <description>A set of extensions for GLIM</description>
-
+  <description>Extension modules for GLIM</description>
   <maintainer email="k.koide@aist.go.jp">k.koide</maintainer>
-
   <license>GPLv3</license>
 
-  <buildtool_depend>catkin</buildtool_depend>
+  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>
+  <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake</buildtool_depend>
+
   <depend>glim</depend>
 
   <export>
+    <build_type condition="$ROS_VERSION == 2">ament_cmake</build_type>
   </export>
 </package>
