--- a/modules/mapping/scan_context_loop_detector/CMakeLists.txt
+++ b/modules/mapping/scan_context_loop_detector/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.0.2)
+cmake_minimum_required(VERSION 3.20)
 project(scan_context_loop_detector)
 
 add_compile_options(-std=c++17)
@@ -7,7 +7,7 @@ find_package(glim REQUIRED)
 find_package(PCL REQUIRED)
 find_package(GTSAM REQUIRED)
 
-add_library(scan_context_loop_detector
+add_library(scan_context_loop_detector SHARED
   src/glim_ext/scan_context_loop_detector.cpp
   thirdparty/scancontext/cpp/module/Scancontext/Scancontext.cpp
 )
@@ -15,11 +15,8 @@ target_include_directories(scan_context_loop_detector PRIVATE
   include
   thirdparty/scancontext/cpp/module
   ${PCL_INCLUDE_DIRS}
-  ${GTSAM_INCLUDE_DIRS}
-  ${glim_INCLUDE_DIRS}
 )
 target_link_libraries(scan_context_loop_detector
   ${PCL_LIBRARIES}
-  ${GTSAM_LIBRARIES}
-  ${glim_LIBRARIES}
+  glim::glim
 )
