--- a/modules/mapping/gnss_global/package.xml
+++ b/modules/mapping/gnss_global/package.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
-  <name>gnss_backend</name>
+  <name>gnss_global</name>
   <version>0.0.0</version>
   <description>Extension modules for GLIM</description>
   <maintainer email="k.koide@aist.go.jp">k.koide</maintainer>
