feat: Generate gridmap from submap and pointcloud
Creates a gridmap from the GLIM submap and the latest 10 point clouds.  The gridmap is published as a ROS2 OccupancyGrid message.  This allows for visualization and use by other ROS2 nodes.  The module also filters point cloud data based on height for improved gridmap accuracy.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -64,8 +64,8 @@ if(ENABLE_IMUVAL)
 endif()
 
 if(ENABLE_EAPM_PATHPLANNER)
-  add_subdirectory(modules/odometry/eapm_path_planner)
-  list(APPEND glim_ext_LIBRARIES eapm_path_planner)
+  add_subdirectory(modules/odometry/create_gridmap)
+  list(APPEND glim_ext_LIBRARIES create_gridmap)
 endif()
 
 # Local and global mapping modules
