--- a/modules/odometry/create_gridmap/CMakeLists.txt
+++ b/modules/odometry/create_gridmap/CMakeLists.txt
@@ -1,11 +1,6 @@
 cmake_minimum_required(VERSION 3.14)
-project(eapm_path_planner)
+project(create_gridmap)
 
-# ポリシーの設定
-cmake_policy(SET CMP0057 NEW) # IN_LIST 演算子を使用可能にする
-cmake_policy(SET CMP0072 NEW) # OpenGLのGLVNDを使用
-
-# パッケージの検索
 find_package(ament_cmake REQUIRED)
 find_package(glim REQUIRED)
 find_package(GTSAM REQUIRED)
@@ -16,13 +11,11 @@ find_package(rclcpp REQUIRED)
 find_package(nav_msgs REQUIRED)
 find_package(tf2_ros REQUIRED)
 
-# ライブラリの作成
-add_library(eapm_path_planner SHARED
-  src/glim_ext/eapm_path_planner.cpp
+add_library(create_gridmap SHARED
+  src/glim_ext/create_gridmap.cpp
 )
 
-# インクルードディレクトリの設定
-target_include_directories(eapm_path_planner PRIVATE
+target_include_directories(create_gridmap PRIVATE
   include
   ${EIGEN3_INCLUDE_DIRS}
   ${GTSAM_INCLUDE_DIRS}
@@ -34,8 +27,7 @@ target_include_directories(eapm_path_planner PRIVATE
   ${tf2_ros_INCLUDE_DIRS}
 )
 
-# ライブラリのリンク
-target_link_libraries(eapm_path_planner
+target_link_libraries(create_gridmap
   ${glim_LIBRARIES}
   ${glim_ext_LIBRARIES}
   ${Iridescence_LIBRARIES}
@@ -45,13 +37,11 @@ target_link_libraries(eapm_path_planner
   ${tf2_ros_LIBRARIES}
 )
 
-# コンパイルオプションの設定
-target_compile_options(eapm_path_planner PRIVATE
+target_compile_options(create_gridmap PRIVATE
   -std=c++17
 )
 
-# 依存関係の設定
-ament_target_dependencies(eapm_path_planner
+ament_target_dependencies(create_gridmap
   glim
   GTSAM
   Eigen3
@@ -62,14 +52,12 @@ ament_target_dependencies(eapm_path_planner
   tf2_ros
 )
 
-# インストール設定
-install(TARGETS eapm_path_planner
+install(TARGETS create_gridmap
   ARCHIVE DESTINATION lib
   LIBRARY DESTINATION lib
   RUNTIME DESTINATION bin
 )
 
-# 依存パッケージのエクスポート
 ament_export_dependencies(
   glim
   GTSAM
@@ -81,5 +69,4 @@ ament_export_dependencies(
   tf2_ros
 )
 
-# パッケージの設定
 ament_package()
