Disables unused modules and removes deprecated DBoW2
Disables several unused modules in CMakeLists.txt to streamline the build process.
Removes the deprecated DBoW2 module and its dependencies to improve maintainability.

Fixes pampem/glim_ext#3

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,14 +5,14 @@ set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_CURRENT_LIST_DIR}/cmake")
 
 # Odometry estimation modules
 option(ENABLE_ORBSLAM "Enable ORB-SLAM odometry" OFF)
-option(ENABLE_VELSUPP "Enable Velocity suppressor" ON)
-option(ENABLE_IMUVAL "Enable IMU calibration validator" ON)
+option(ENABLE_VELSUPP "Enable Velocity suppressor" OFF)
+option(ENABLE_IMUVAL "Enable IMU calibration validator" OFF)
 
 # Local and global mapping modules
 option(ENABLE_SCAN_CONTEXT "Enable ScanContext Loop Detector" OFF)
 option(ENABLE_DBOW "Enable DBoW Loop Detector" OFF)
-option(ENABLE_GNSS "Enable GNSS module (ROS1 is not supported)" ON)
-option(ENABLE_FLATEARTHER "Enable flat earth assumption module" ON)
+option(ENABLE_GNSS "Enable GNSS module (ROS1 is not supported)" OFF)
+option(ENABLE_FLATEARTHER "Enable flat earth assumption module" OFF)
 option(ENABLE_EAPM_PATHPLANNER "Enable E-APM Path Planner" ON)
 
 #################
