--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,7 @@ set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_CURRENT_LIST_DIR}/cmake")
 option(ENABLE_ORBSLAM "Enable ORB-SLAM odometry" OFF)
 option(ENABLE_VELSUPP "Enable Velocity suppressor" ON)
 option(ENABLE_IMUVAL "Enable IMU calibration validator" ON)
+option(ENABLE_IMUPRED "Enable IMU prediction module" ON)
 option(ENABLE_GRAVITY "Enable Gravity estimation and correction module" ON)
 option(ENABLE_DESKEWING "Enable Point Cloud Deskewing module" ON)
 
@@ -62,6 +63,11 @@ endif()
 if(ENABLE_IMUVAL)
   add_subdirectory(modules/odometry/imu_validator)
   list(APPEND glim_ext_LIBRARIES imu_validator)
+endif()
+
+if(ENABLE_IMUPRED)
+  add_subdirectory(modules/odometry/imu_prediction)
+  list(APPEND glim_ext_LIBRARIES imu_prediction)
 endif()
 
 if(ENABLE_GRAVITY)
